# manufactory

./: Cargo.toml  README.md  block.json  co.json  colors.html  info.toml  target.txt
app/: Cargo.toml
app/src/: app.rs  direction.rs  lib.rs  macros.rs  my_time.rs  save_load.rs
app/src/camera/: camera.rs  camera_controller.rs  frustum.rs
app/src/client_engine/: mod.rs
app/src/common/: mod.rs
app/src/content/: mod.rs
app/src/content_loader/: indices.rs  mod.rs
app/src/coords/: chunk_coord.rs  coord.rs  global_coord.rs  local_coord.rs  mod.rs
app/src/graphic/: complex_object.rs
app/src/graphic/render/: animated_model.rs  block.rs  complex_object.rs  mod.rs  model.rs
app/src/graphic/render/block_managers/: default_manager.rs  greed_manager.rs  mod.rs
app/src/gui/: gui_controller.rs  mod.rs  setting.rs  theme.rs
app/src/gui/main_screen/: in_game_menu.rs  mod.rs  worlds.rs
app/src/gui/my_widgets/: assembling_machine_slot.rs  category_change_button.rs  container.rs  ingredients.rs  inventory_slot.rs  recipe.rs
app/src/input_event/: input_broker.rs  input_service.rs
app/src/level/: mod.rs
app/src/light/: light.rs  light_map.rs  light_solver.rs  light_solvers.rs  mod.rs  new_light.rs  new_light_map.rs  new_light_solver.rs  new_light_solvers.rs  useful.rs
app/src/meshes/: mod.rs
app/src/physics/: collider.rs  mod.rs  physic_pipeline.rs  rigid_body.rs
app/src/player/: player.rs
app/src/recipes/: item_interaction.rs  recipes.rs
app/src/server/: connect_local_server.rs  local_server.rs  mod.rs  no_server.rs
app/src/server_engine/: mod.rs
app/src/socket/: client.rs  common.rs  mod.rs  server.rs
app/src/socket/packet/: header.rs  mod.rs  packet.rs
app/src/threads/: renderer.rs  save.rs  voxel_data_updater.rs  world_loader.rs
app/src/unsafe_mutex/: poison.rs
app/src/voxels/: chunk.rs  chunks.rs  find_chunks.rs  generator.rs  mod.rs  new_chunk.rs  new_chunks.rs  ray_cast.rs  voxel.rs
app/src/voxels/block/: block_belt.rs  block_builder.rs  block_ore.rs  block_player.rs  block_test.rs  functions.rs  mod.rs
app/src/voxels/live_voxels/: assembling_machine.rs  cowboy.rs  drill.rs  furnace.rs  manipulator.rs  mod.rs  transport_belt.rs
app/src/world/: mod.rs  sun.rs
audio/: README.txt
benches/: coords_speed.rs
complex_objects/: transport_belt.json
graphics_engine/: Cargo.toml
graphics_engine/src/: constants.rs  lib.rs  macros.rs  mesh.rs  player_mesh.rs  raw_texture.rs  texture.rs
graphics_engine/src/animator/: animation.rs  bone_key_frames.rs  joint.rs  joint_transform.rs  key_frame.rs  mod.rs
graphics_engine/src/bind_group/: block_texture.rs  mod.rs  oit.rs
graphics_engine/src/bind_group_layout/: mod.rs  oit.rs  texture.rs  vertex_storage.rs  vertex_uniform.rs
graphics_engine/src/egui/: mod.rs
graphics_engine/src/models/: animated_model.rs  load_animated_model.rs  load_model.rs  load_texture.rs  mod.rs  model.rs  raw_animated_model.rs  raw_model.rs
graphics_engine/src/pipeline/: builder.rs  mod.rs
graphics_engine/src/resources/: mod.rs  raw_resources.rs  resources.rs
graphics_engine/src/shaders/: animated_model.wgsl  block_fragment.wgsl  composite_fragment.wgsl  crosshair.wgsl  glass_fragment.wgsl  mod.rs  player.wgsl  post_process_fragment.wgsl  selection.wgsl
graphics_engine/src/state/: draw.rs  mod.rs
graphics_engine/src/vertices/: animated_model_vertex.rs  mod.rs  model_vertex.rs  player.rs
models/: Cargo.toml  cowboy.dae  manipulator.dae
res/blocks/: box.json  cowboy.json  dd.json  drill.json  furnace.json  glass_green.json  glass_red_more_transparent.json  iron_ore.json  kkk.json  trashcan.json
res/complex_objects/: transport_belt.json
res/content/black_glass/: info.toml
res/content/trashcan/: info.toml
res/game/animated_models/: manipulator.dae
res/game/blocks/: 15.json  assembling_machine.json  drill.json  furnace.json  glass_blue.json  glass_classic.json  glass_red.json  green.json  light.json  light2.json  light3.json  light4.json  light5.json  manipulator.json  rock.json  transport_belt.json
resources/: Cargo.toml
resources/src/: animated_model.rs  lib.rs  model.rs  texture.rs
src/: bytes.rs  crosshair.wgsl  cursor_lock.rs  direction.rs  macros.rs  main.rs  manipulator.wgsl  my_time.rs  nalgebra_converter.rs  save_load.rs  server.rs  setting.rs  shader.wgsl  size.rs  state.rs  texture.rs  unsafe_renderer.rs  unsafe_renderer_test.rs  unsafe_voxel_data_updater.rs  world_loader.rs  world_loader_test.rs
src/camera/: camera.rs  camera_controller.rs  frustum.rs  mod.rs
src/content/: mod.rs
src/coords/: chunk_coord.rs  coord.rs  global_coord.rs  local_coord.rs
src/engine/: mesh.rs  mod.rs  setting.rs  state.rs  texture.rs
src/engine/bind_group/: blending.rs  block_texture.rs  mod.rs  post_proccess.rs  post_process.rs
src/engine/egui/: mod.rs
src/graphic/: complex_object.rs  mod.rs  render.rs  render_selection.rs
src/gui/: cursor_lock.rs  draw.rs  gui_controller.rs  mod.rs  setting.rs  theme.rs
src/input_event/: input_broker.rs  input_service.rs  mod.rs
src/level/: mod.rs
src/light/: light.rs  light_map.rs  light_solver.rs  mod.rs
src/meshes/: mod.rs
src/mipmaps/: mod.rs
src/model/: animated_model.rs  load_animated_model.rs  load_model.rs  load_texture.rs  mod.rs
src/models/: animated_model.rs  load_animated_model.rs  load_model.rs  load_texture.rs  model.rs
src/pipelines/: mod.rs  object.rs
src/player/: inventory.rs  mod.rs  player.rs
src/recipes/: item.rs  item_interaction.rs  item_type.rs  items.rs  mod.rs  recipe.rs  recipes.rs  storage.rs
src/threads/: mod.rs  renderer.rs  save.rs  voxel_data_updater.rs  world_loader.rs
src/unsafe_mutex/: mod.rs  poison.rs
src/vertices/: block_vertex.rs  mod.rs  selection_vertex.rs
src/voxels/: assembling_machine.rs  block.rs  chunk.rs  chunks.rs  find_chunks.rs  generator.rs  mod.rs  ray_cast.rs  transport_belt.rs  voxel.rs  voxel_data.rs
src/world/: chunk_coords.rs  coords.rs  global_coords.rs  global_xyz.rs  loader.rs  local_coords.rs  mod.rs  sun.rs  xyz.rs
testmod/: Cargo.toml
testmod/src/: lib.rs
(+92 files in other folders)
