[workspace]
members = [ "app", "graphics_engine", "resources" , "testmod"]

[package]
name = "manufactory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "./app" }

libloading = "0.8.3"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
debug = true

[profile.full-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
strip = "symbols"
