[workspace]
members = [ "app", "graphics_engine", "testmod"]

[package]
name = "manufactory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
app = { path = "./app" }

tokio = { version = "1.40.0", features = ["full"] }
libloading = "0.8.3"

[profile.dev]
debug = true

[profile.release]
debug = true

[profile.full-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
strip = "symbols"
