[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app"
crate-type = ["dylib", "rlib"]

[dependencies]
graphics_engine = { path = "../graphics_engine" }
resources = { path = "../resources" }

arc-swap = "1.7.1"

wgpu-core = "0.19.0"
wgpu-types = { version = "0.19", features = ["serde", "trace", "replay"]}
wgpu = "0.19"

winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24.6"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
bitflags = {version = "2.3.3", features = ["serde"]}
rand = "0.8.5"
itertools = "0.11.0"
atomic-wait = "1.1.0"
chrono = "0.4"
rodio = "0.17.3"
walkdir = "2"
noise = "0.8.2"

serde = { version = "1", features = ["derive", "rc"] }
erased-serde = "0.4"
serde_json = "1"
flate2 = "1.0.28"
bincode = "1.3.3"

egui = { version = "0.27", features = ["color-hex"]}

tokio = { version = "1.34.0", features = ["full"] }
rayon = "1.8"

toml = "0.8.12"