[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app"

[dependencies]
graphics_engine = { path = "../graphics_engine" }

wgpu-core = "=0.21.1"
wgpu-types = { version = "=0.20.0", features = ["serde"]}
wgpu = "=0.20.1"

winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24.6"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
bitflags = {version = "2.3.3", features = ["serde"]}
rand = "0.8.5"
itertools = "0.11.0"
atomic-wait = "1.1.0"
chrono = "0.4"
rodio = "0.17.3"
walkdir = "2"
noise = "0.8.2"

serde = { version = "1", features = ["derive", "rc"] }
erased-serde = "0.4"
serde_json = "1"
flate2 = "1.0.28"
bincode = "1.3.3"

russimp = { version = "=2.0.5", features = ["prebuilt"] }

egui = { version = "0.28", features = ["color-hex"]}

thiserror = "1.0"

tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
rayon = "1.8"

toml = "0.8.12"