[package]
name = "graphics_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resources = { path = "../resources" }

wgpu-core = "0.19"
wgpu-types = { version = "0.19", features = ["serde", "trace", "replay"]}
wgpu = "0.19"

winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
itertools = "0.11.0"
serde = "1"

egui-winit = "0.27.0"
egui-wgpu = "0.27"
egui = { version = "0.27", features = ["color-hex"]}