[package]
name = "graphics_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
wgpu-core = "=0.21.1"
wgpu-types = { version = "=0.20.0", features = ["serde"]}
wgpu = "=0.20.1"

winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
itertools = "0.11.0"
serde = "1"

egui-winit = "0.28.0"
egui-wgpu = "0.28"
egui = { version = "0.28", features = ["color-hex"]}