[package]
name = "graphics_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
wgpu-core = "=22.1.0"
wgpu-types = { version = "=22.0.0", features = ["serde"]}
wgpu = "=22.1.0"

winit = "0.30.5"
bytemuck = { version = "1.14", features = ["derive"] }
itertools = "0.11.0"
serde = "1"

egui-winit = "0.29.0"
egui-wgpu = "0.29"
egui = { version = "0.29", features = ["color-hex"]}